Make ZGC used for pulsar-admin too